--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -1,140 +1,183 @@
 *,
 *::before,
 *::after {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  text-decoration: none;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    text-decoration: none;
 }
 
 body {
-  font-family: 'Crimson Text', serif;
-  overflow-x: hidden;
+    font-family: "Crimson Text", serif;
+    overflow-x: hidden;
 }
 
 img {
-  width: 100%;
+    width: 100%;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .big-wrapper {
-  position: relative;
-  width: 100%;
-  min-height: 100vh;
-  overflow: hidden;
-  background-color: #F9F1F1;
-  display: flex;
-  flex-direction: column;
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    overflow: hidden;
+    background-color: #f9f1f1;
+    display: flex;
+    flex-direction: column;
 }
 
 .container {
-  position: relative;
-  padding: 0 0 2rem;
-  max-width: 83rem;
-  width: 100%;
-  margin: 0 auto;
-  padding: 0 3rem;
-  z-index: 10;
+    position: relative;
+    padding: 0 0 2rem;
+    max-width: 83rem;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 3rem;
+    z-index: 10;
 }
-
 
 /* Awal FAQ ----------------------------------------------------------------------------------------------------------- */
 .judulfaq .container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 1;
-  margin-bottom: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    margin-bottom: 15px;
 }
 
 .judulfaq .container h1 {
-  color: #7d4f50;
-  font-size: 36px;
+    color: #7d4f50;
+    font-size: 36px;
 }
 
 .judulfaq .container h1::before {
-  content: '';
-  position: absolute;
-  bottom: -15px;
-  left: 48%;
-  transform: translateY(-50%, -50%);
-  background-color: #cc8b86;
-  width: 50px;
-  height: 3px;
+    content: "";
+    position: absolute;
+    bottom: -15px;
+    left: 48%;
+    transform: translateY(-50%, -50%);
+    background-color: #cc8b86;
+    width: 50px;
+    height: 3px;
 }
 
 .faq .container {
-  min-height: 30vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-flow: column;
-  background-color: #F9F1F1;
-  margin-top: 40px;
-  margin-bottom: 35px;
+    min-height: 30vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: column;
+    background-color: #f9f1f1;
+    margin-top: 40px;
+    margin-bottom: 35px;
 }
 
 .faq .container .accordion {
-  display: block;
-  width: 700px;
+    display: block;
+    width: 700px;
 }
 
 .faq .container .accordion .accordion-header {
-  width: 100%;
-  /* height: 35px; */
-  /* background-color: #cc8b86; */
-  color: #7d4f50;
-  margin: 5px 0;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-  cursor: pointer;
-  position: relative;
-  border-radius: 10px;
-  border: 3px solid #cc8b86;
-  padding: 10px;
+    width: 100%;
+    /* height: 35px; */
+    /* background-color: #cc8b86; */
+    color: #7d4f50;
+    margin: 5px 0;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+    position: relative;
+    border-radius: 10px;
+    border: 3px solid #cc8b86;
+    padding: 10px;
 }
 
 .faq .container .accordion .accordion-header:hover {
-  background-color: #cc8b86;
-  color: #f9eae1;
+    background-color: #cc8b86;
+    color: #f9eae1;
 }
 
 .faq .container .accordion .accordion-header:hover span {
-  color: #f9eae1;
+    color: #f9eae1;
 }
 
 .faq .container .accordion .accordion-header h3 {
-  position: relative;
-  display: inline;
-  font-size: 20px;
-  justify-content: center;
-  align-items: center;
-  left: 30px;
-  top: 1.7px;
+    position: relative;
+    display: inline;
+    font-size: 20px;
+    justify-content: center;
+    align-items: center;
+    left: 30px;
+    top: 1.7px;
 }
 
 .faq .container .accordion .accordion-body {
-  padding: 15px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-  background-color: #F9F1F1;
-  color: #7d4f50;
-  display: none;
-  border-radius: 10px;
+    padding: 15px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    background-color: #f9f1f1;
+    color: #7d4f50;
+    display: none;
+    border-radius: 10px;
 }
 
 .faq .container .accordion .accordion-header span {
-  position: absolute;
-  /* top: 1.5px; */
-  height: 25px;
-  width: 25px;
-  color: #7d4f50;
-  text-align: center;
-  line-height: 25px;
-  font-size: 13px;
+    position: absolute;
+    /* top: 1.5px; */
+    height: 25px;
+    width: 25px;
+    color: #7d4f50;
+    text-align: center;
+    line-height: 25px;
+    font-size: 13px;
 }
 
+.table .container {
+    color: #7d4f50;
+    /* height: 100vh; */
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.9rem;
+    background-color: #f9f1f1;
+}
+
+.table .container table {
+    border-collapse: collapse;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+    background-color: #f9f1f1;
+    text-align: left;
+    overflow: hidden;
+}
+
+.table .container thead {
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+}
+
+.table .container th {
+    padding: 1rem 2rem;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 0.1rem;
+    font-size: 0.7rem;
+    font-weight: 900;
+}
+
+.table .container td {
+    text-align: center;
+    padding: 1rem 2rem;
+}
+
+.table .container tr:nth-child(even) {
+    background-color: #f3e3e2;
+}
+
+.table .container td a {
+    color: #7d4f50;
+    border: none;
+}
 
 /* .faq .container .accordion:nth-child(1) .accordion-body{
   display: block;
